--- a/simple-board/src/main/resources/application.yml
+++ b/simple-board/src/main/resources/application.yml
@@ -1,2 +1,34 @@
 server:
   port: 80
+debug: false
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+logging:
+  level:
+    com.guardjo.simpleboard: debug
+    org.springframework.web.servlet: debug
+    org.hibernate.type.descriptor.sq.BasicBinder: trace
+
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/simple_board
+    username: kyeongho
+    password: 1234
+  jpa:
+    defer-datasource-initialization: true
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate.format_sql: true
+      hibernate.default_batch_fetch_size: 100
+  h2:
+    console:
+      enabled: true
+  sql:
+    init:
+      mode: always
