--- a/simple-board/src/main/resources/application.yml
+++ b/simple-board/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/simple_board
     username: kyeongho
-    password: 1234
+    password: 1q2w3e4r
   jpa:
     defer-datasource-initialization: true
     hibernate:
