--- a/simple-board/src/main/resources/application.yml
+++ b/simple-board/src/main/resources/application.yml
@@ -39,3 +39,7 @@ spring:
       detection-strategy: annotated
   thymeleaf3:
     decoupled-logic: true
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
