#36 클라우드 배포를 위해 일부 설정 추가 및 변경
- cloudtype 에서 제공하는 클라우드 서비스 활용
-- mysql을 제공해주지 않기에 대안으로 mariadb 추가
- 배포용 별도 설정 파일 추가 (mariad db 연결 관련)
- readme 내 프로젝트 구성 정보 추가
-- 일부 변경요소에 따른 버전 업데이트 (v1.0.0 -> v1.0.1)

--- a/simple-board/src/main/resources/application.yml
+++ b/simple-board/src/main/resources/application.yml
@@ -43,3 +43,13 @@ spring:
     hiddenmethod:
       filter:
         enabled: true
+---
+spring:
+  config:
+    activate:
+      on-profile: "release"
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: ${SIMPLE_BOARD_DB_URL}
+    username: ${SIMPLE_BOARD_DB_USERNAME}
+    password: ${SIMPLE_BOARD_DB_PASSWORD}
