--- a/simple-board/src/main/resources/application.yml
+++ b/simple-board/src/main/resources/application.yml
@@ -43,6 +43,23 @@ spring:
     hiddenmethod:
       filter:
         enabled: true
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: ${KAKAO_OAUTH2_LOGIN_KEY}
+            client-secret: ${KAKAO_OAUTH2_LOGIN_SECRET}
+            client-name: simple-article-login
+            client-authentication-method: POST
+            authorization-grant-type: AUTHORIZATION_CODE
+            redirect-uri: "{baseUrl}/login/oauth2/code/kakao"
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
 ---
 spring:
   config:
