--- a/simple-board/src/main/resources/application.yml
+++ b/simple-board/src/main/resources/application.yml
@@ -52,7 +52,7 @@ spring:
             client-secret: ${KAKAO_OAUTH2_LOGIN_SECRET}
             client-name: simple-article-login
             client-authentication-method: POST
-            authorization-grant-type: AUTHORIZATION_CODE
+            authorization-grant-type: authorization_code
             redirect-uri: "{baseUrl}/login/oauth2/code/kakao"
         provider:
           kakao:
