#54 jdbc 연결 설정을 외부변수화 하면서 발생한 테스트 오류 수정
- spring boot init 테스트 시 외부 변수를 읽지 못해 테스트 실패 발생
-- 별도 test 프로필용 설정을 추가한 후 spring boot init 테스트 클래스에서 프로필 지정

--- a/simple-board/src/main/resources/application.yml
+++ b/simple-board/src/main/resources/application.yml
@@ -70,3 +70,11 @@ spring:
     url: ${SIMPLE_BOARD_DB_URL}
     username: ${SIMPLE_BOARD_DB_USERNAME}
     password: ${SIMPLE_BOARD_DB_PASSWORD}
+---
+spring:
+  config:
+    activate:
+      on-profile: "test"
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
