--- a/simple-board/src/main/resources/application.yml
+++ b/simple-board/src/main/resources/application.yml
@@ -66,7 +66,7 @@ spring:
     activate:
       on-profile: "release"
   datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
+    driver-class-name: org.postgresql.Driver
     url: ${SIMPLE_BOARD_DB_URL}
     username: ${SIMPLE_BOARD_DB_USERNAME}
     password: ${SIMPLE_BOARD_DB_PASSWORD}
