#69 비주얼 테스트를 위한 Storybook 구성
- 비주얼 테스트용 Storybook 의존성 추가 및 관련 설정 구성
- Component 내 자잘한 오타 및 버그 수정

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -34,3 +34,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# StorybookJs #
+storybook-static/
+
+# End of https://www.toptal.com/developers/gitignore/api/storybookjs
