#78 intellij 설정 파일 형상 관리 제외 처리
- 작업환경을 vscode 에서 intellij로 변경함에 따라 IDE 관련 설정 폴더 형상 관리에서 제외 처리하도록 .ginignore 업데이트

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -38,4 +38,7 @@ next-env.d.ts
 # StorybookJs #
 storybook-static/
 
+# intellij #
+.idea/
+
 # End of https://www.toptal.com/developers/gitignore/api/storybookjs
